--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,30 +1,36 @@
-body {background-color:pink;
-background-image: url(../Imagenes/utencillos.png);
+body {background-color: withe;
+      background-image: url(../Imagenes/fondococina.jpg);
 
 }
+.logopag {width: 200px;}
 
-.tituloprincipal1 {color: white}
+header { border: 5px white;
+         display: flex; flex-wrap: wrap; justify-content: space-between;
+background-color: #D2B4DE;
 
-.ingredientes {color: white}
-.ingredientes {text-decoration: underline}
 
-.modoprep {text-decoration: underline;}
+       }
+         .iconoface {width: 50px; }
+         .iconoinstagram {width: 50px;}
+         .iconotwitter {width: 50px;}
+         .tituloprincipal1 {font-size: 300%}
+         .Enlacesredes {}
 
-.titulofotoplato {text-decoration: underline;}
-.titulofotoplato {font-size:100%;}
-p {text-align: center;}
 
-.tituloprincipal1 {background-color: fuchsia}
 
-header {background-color: green; border: 5px white dotted;}
-nav {background-color: orange;}
-section {background-color: yellow;}
-aside {background-color: blue;}
-footer {background-color: red;}
+
 .iconowspp {width: 50px;
   position: fixed; bottom:10px;
 right: 15px;}
 
-.iconoface {width: 70px; }
-.iconoinstagram {width: 70px;}
-.iconotwitter {width: 70px;}
+
+
+footer { background-color: #C39BD3;
+
+display: flex; flex-wrap: wrap; justify-content: space-around; align-items:
+        }
+.mapabarrio {width: 20%;}
+
+section {background-color: #C39BD3;}
+
+.titulofotoplato {display: flex; justify-content: center;}
